--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.12.1",
+    "jspdf": "^2.5.1",
     "kutty": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,6 +15,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.7",
     "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4"
   },
